--- a/index.html
+++ b/index.html
@@ -581,14 +581,52 @@ document.addEventListener('DOMContentLoaded', async () => {
         renderEventCards(calendarEvents);
     });
 
+    const sampleEvents = [
+        {
+            id: 1,
+            name: "Losar Festival",
+            date: "2025-02-21",
+            description: "Tibetan New Year celebration with traditional dances and prayers",
+            location: "Various Monasteries",
+            category: "festival",
+            traditions: ["Masked dances", "Prayer ceremonies", "Community feast"]
+        },
+        {
+            id: 2,
+            name: "Saga Dawa",
+            date: "2025-05-15",
+            description: "Buddha's enlightenment celebration",
+            location: "Rumtek Monastery",
+            category: "religious",
+            traditions: ["Prayer flags hoisting", "Butter lamp offerings"]
+        },
+        {
+            id: 3,
+            name: "Pang Lhabsol",
+            date: "2025-08-23",
+            description: "Worship of Mount Khangchendzonga",
+            location: "Pemayangtse Monastery",
+            category: "cultural",
+            traditions: ["Warrior dance", "Mountain offerings"]
+        },
+        {
+            id: 4,
+            name: "Teyongsi Sirijunga",
+            date: "2025-12-20",
+            description: "Limboo New Year celebrations",
+            location: "Various Locations",
+            category: "festival",
+            traditions: ["Traditional music", "Dance performances"]
+        }
+    ];
+
     try {
-        const response = await fetch('http://localhost:8080/api/calendar');
-        const events = await response.json();
-        calendarEvents = Array.isArray(events) ? events : [];
+        // Instead of fetching from API, use sample events directly
+        calendarEvents = sampleEvents;
         renderEventCards(calendarEvents);
         renderCalendar(current.getFullYear(), current.getMonth());
     } catch (error) {
-        console.error('Error fetching events:', error);
+        console.error('Error loading events:', error);
         eventsContainer.innerHTML = '<p class="text-red-500">Failed to load events. Please try again later.</p>';
     }
 });
